# JuegoStalker

./: .gitignore  CMakeLists.txt  CMakePresets.json  JuegoStalker.cpp  JuegoStalker.hpp  README.md  stalker_95.onnx
Common/: Common.hpp
Docs/html/: _cliente_red_8cpp.html  _cliente_red_8cpp__incl.map  _cliente_red_8cpp__incl.md5  _cliente_red_8hpp.html  _cliente_red_8hpp.js  _cliente_red_8hpp__dep__incl.map  _cliente_red_8hpp__dep__incl.md5  _cliente_red_8hpp__incl.map  _cliente_red_8hpp__incl.md5  _cliente_red_8hpp_source.html  _common_8hpp.html  _common_8hpp.js  _common_8hpp__dep__incl.map  _common_8hpp__dep__incl.md5  _common_8hpp__incl.map  _common_8hpp__incl.md5  _common_8hpp_source.html  _heroe_local_multi_8cpp.html  _heroe_local_multi_8cpp__incl.map  _heroe_local_multi_8cpp__incl.md5  _heroe_local_multi_8hpp.html  _heroe_local_multi_8hpp.js  _heroe_local_multi_8hpp__dep__incl.map  _heroe_local_multi_8hpp__dep__incl.md5  _heroe_local_multi_8hpp__incl.map  _heroe_local_multi_8hpp__incl.md5  _heroe_local_multi_8hpp_source.html  _heroe_local_solo_8cpp.html  _heroe_local_solo_8cpp__incl.map  _heroe_local_solo_8cpp__incl.md5  _heroe_local_solo_8hpp.html  _heroe_local_solo_8hpp.js  _heroe_local_solo_8hpp__dep__incl.map  _heroe_local_solo_8hpp__dep__incl.md5  _heroe_local_solo_8hpp__incl.map  _heroe_local_solo_8hpp__incl.md5  _heroe_local_solo_8hpp_source.html  _heroe_remoto_8cpp.html  _heroe_remoto_8cpp__incl.map  _heroe_remoto_8cpp__incl.md5  (+384 more)
Docs/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  (+54 more)
Laberinto/: Laberinto.cpp  Laberinto.hpp
Personaje/: Personaje.cpp  Personaje.hpp
Personaje/Heroe/: HeroeLocal.cpp  HeroeLocal.hpp  HeroeLocalMulti.cpp  HeroeLocalMulti.hpp  HeroeLocalSolo.cpp  HeroeLocalSolo.hpp  HeroeRemoto.cpp  HeroeRemoto.hpp
Personaje/Perseguidor/: PerseguidorHumanoLocal.cpp  PerseguidorHumanoLocal.hpp  PerseguidorHumanoRemoto.cpp  PerseguidorHumanoRemoto.hpp  PerseguidorIA.cpp  PerseguidorIA.hpp  train_stalker.py
Red/: ClienteRed.cpp  ClienteRed.hpp  Red.hpp  RedBase.cpp  RedBase.hpp  ServidorRed.cpp  ServidorRed.hpp
UI/: UI.hpp  UINcurses.cpp  UINcurses.hpp  UIQT.cpp  UIQT.hpp
